--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,1 +1,1 @@
-<app-todo-item *ngFor="let todo of todos" [todo]="todo"></app-todo-item>
+<app-todo-item class="todo-list" *ngFor="let todo of todos" [todo]="todo"></app-todo-item>
