--- a/src/styles.css
+++ b/src/styles.css
@@ -22,8 +22,14 @@ body {
   flex-direction: column;
 }
 .spaceBetween-horizontally {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-direction: row;
+ }
+.spaceAround-horizontally {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-direction: row;
 }
